# Sigh-duck-anchor-reward-program-

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/sighduck/: Cargo.toml
programs/sighduck/src/: error.rs  lib.rs
tests/: sighduck.ts
