[package]
name = "sighduck"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sighduck"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0.3"
anchor-spl = "0.20.1"
